@@ -2,7 +2,10 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI=5
+
 JAVA_PKG_IUSE="source examples doc"
+
 inherit eutils java-pkg-2 java-ant-2
 
 MY_PN="maxent"
@@ -15,10 +18,10 @@ SRC_URI="mirror://sourceforge/maxent/${MY_P}.tgz"
 LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS="~x86"
-
 IUSE="${IUSE}"
 
-COMMON_DEP="dev-java/java-getopt
+COMMON_DEP="
+	dev-java/java-getopt
 	dev-java/trove"
 DEPEND=">=virtual/jdk-1.4
 	${COMMON_DEP}"
@@ -28,9 +31,8 @@ RDEPEND=">=virtual/jre-1.4
 EANT_BUILD_TARGET="compile package"
 S="${WORKDIR}/${MY_P}"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"/lib
+src_prepare() {
+	cd "${S}"/lib || die
 	rm -v *.jar || die "failed to rm jars"
 	java-pkg_jarfrom java-getopt-1 gnu.getopt.jar java-getopt.jar
 	java-pkg_jarfrom trove
